--- a/notebooks/FIG3_gausscount_circular_aperture.ipynb
+++ b/notebooks/FIG3_gausscount_circular_aperture.ipynb
@@ -553,9 +553,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-2.0.1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-2.0.1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -567,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
