--- a/notebooks/FIG1_2_simulation.ipynb
+++ b/notebooks/FIG1_2_simulation.ipynb
@@ -26,8 +26,8 @@
     "\n",
     "import sys\n",
     "sys.path.insert(0,'..')\n",
-    "from gausscount import counting\n",
-    "from gausscount import profile\n",
+    "from backpropcount import counting\n",
+    "from backpropcount import profile\n",
     "\n",
     "from scipy.stats import multivariate_normal\n",
     "from matplotlib.ticker import FuncFormatter\n",
