--- a/notebooks/FIG3_backpropcount_circular_aperture.ipynb
+++ b/notebooks/FIG3_backpropcount_circular_aperture.ipynb
@@ -19,8 +19,8 @@
     "import sys\n",
     "sys.path.insert(0,'..')\n",
     "\n",
-    "from gausscount import counting\n",
-    "from gausscount import profile\n",
+    "from backpropcount import counting\n",
+    "from backpropcount import profile\n",
     "\n",
     "import h5py\n",
     "import numpy as np\n",
@@ -567,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
